# rust-hf-downloader

./: AGENT.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_0.6.0.md  RELEASE_NOTES_0.6.1.md  RELEASE_NOTES_0.6.2.md  SECURITY.md  SECURITY_FIX.md  TESTING.md  TROUBLESHOOTING.md  VERIFICATION_CORRECTNESS.md
changelog/: README.md  RELEASE_NOTES_0.6.0.md  RELEASE_NOTES_0.6.1.md  RELEASE_NOTES_0.6.2.md  RELEASE_NOTES_0.7.0.md  RELEASE_NOTES_0.7.1.md  RELEASE_NOTES_0.7.2.md  RELEASE_NOTES_0.7.5.md  RELEASE_NOTES_0.8.0.md  RELEASE_NOTES_0.9.0.md  RELEASE_NOTES_0.9.5.md  RELEASE_NOTES_0.9.7.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.1.1.md  RELEASE_NOTES_1.2.0.md  RELEASE_NOTES_1.2.1.md  RELEASE_NOTES_1.2.2.md  RELEASE_NOTES_1.3.1.md  RELEASE_NOTES_1.3.2.md
examples/headless/: ci-example.yml  download-examples.sh  search-examples.sh  timing-test.sh
plan/: 00-overview.md  01-phase1-popup-search.md  02-phase2-basic-filters.md  03-phase3-advanced-filters.md  04-phase4-polish.md  05-phase1-popup-search.md  06-phase2-basic-filters.md  07-phase3-advanced-filters.md  08-phase4-polish.md  09-tag-filtering-alternatives-summary.md  10-alternative3-visual-mockup.md  11-alternative3-feasibility-analysis.md  filter-todos.md  phase1_enhanced_filter_toolbar.md  phase2_panel_background_highlighting.md  phase3_advanced_graphics.md
plans/: README.md  add-headless.md  architecture-simplify.md  fix-compilation-errors.md  fix-mutex-usage.md  phase1-core-canvas.md  phase2-completion-summary.md  phase2-visual-popups.md  phase3-advanced-features.md  phase3-completion-summary.md  phase4-completion-summary.md  phase4-interactive-canvas.md  phase5-completion-summary.md
plans/implementation/: add-headless-phase1.md  add-headless-phase2.md  add-headless-phase3.md  add-headless-phase4.md  add-headless-phase5.md
plans/tasks/: 00-phase3-summary.md  01-missing-function-implementations.md  02-visualization-enhancements.md  03-performance-optimizations.md  04-testing-strategy.md
src/: AGENTS.md  api.rs  cli.rs  config.rs  download.rs  headless.rs  http_client.rs  main.rs  models.rs  rate_limiter.rs  registry.rs  utils.rs  verification.rs
src/ui/: AGENTS.md  app.rs  mod.rs  render.rs
(+8 files in other folders)
