[package]
name = "rust-hf-downloader"
version = "0.6.0"
description = "TUI for searching and downloading HuggingFace models"
authors = ["Johannes Bertens"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
tui-input = "0.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
regex = "1.10"
toml = "0.8"
