[package]
name = "rust-hf-downloader"
version = "0.9.1"
description = "TUI for searching and downloading HuggingFace models"
authors = ["Johannes Bertens <no-reply@jreb.nl>"]
license = "MIT"
edition = "2021"
documentation = "https://github.com/JohannesBertens/rust-hf-downloader"
homepage = "https://jreb.nl"
repository = "https://github.com/JohannesBertens/rust-hf-downloader"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
tui-input = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
regex = "1.10"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"

# Pin dependencies for Rust 1.75.0 compatibility (Ubuntu 22.04)
url = "=2.4.1"
idna = "=0.5.0"
backtrace = "=0.3.71"
indexmap = "=2.2.6"
